# PythonCLI

./: .travis.yml  pyproject.toml
src/: klickbrick.py
src/klickbrick/: klickbrick.py
tests/: test_klickbrick.py
